<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.SignInFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/tw_price"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardElevation="3dp">

                <Button
                    android:id="@+id/bt_login"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:text="@string/enter"
                    android:textSize="24sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>